# Arcella

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: docs.yaml  rust.yml
alme-proto/: Cargo.toml
alme-proto/src/: lib.rs
arcella/: Cargo.toml
arcella-cli/: Cargo.toml
arcella-cli/src/: main.rs
arcella-fs-utils/: Cargo.toml
arcella-fs-utils/src/: config_loader.rs  error.rs  lib.rs  toml.rs  types.rs  warnings.rs
arcella-lib/: Cargo.toml
arcella-lib/src/: lib.rs
arcella-lib/src/alme/: mod.rs
arcella-lib/src/alme/proto/: mod.rs
arcella-lib/src/spec/: mod.rs
arcella-types/: Cargo.toml
arcella-types/src/: lib.rs
arcella-types/src/alme/: mod.rs
arcella-types/src/alme/proto/: mod.rs
arcella-types/src/config/: mod.rs
arcella-types/src/manifest/: mod.rs
arcella-types/src/spec/: mod.rs
arcella-types/src/value/: mod.rs
arcella-wasmtime/: Cargo.toml
arcella-wasmtime/src/: error.rs  from_wasmtime.rs  lib.rs  manifest.rs
arcella/src/: main.rs
arcella/src/alme/: commands.rs  mod.rs  server.rs
arcella/src/cache/: mod.rs
arcella/src/config/: default_config.toml  mod.rs
arcella/src/error/: mod.rs
arcella/src/log/: mod.rs
arcella/src/manifest/: mod.rs
arcella/src/runtime/: mod.rs
arcella/src/storage/: mod.rs
arcella/tests/: integration_tests.rs
cli/: Cargo.toml
cli/src/: main.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  crates.js  help.html  search-index.js  settings.html  src-files.js  КОНФИГУРАЦИЯ.md
docs/Arcella/: all.html  fn.main.html  index.html  struct.Cli.html
docs/Arcella/alme/: fn.start.html  index.html  sidebar-items.js  struct.AlmeServerHandle.html
docs/Arcella/cache/: index.html  sidebar-items.js  struct.ModuleCache.html
docs/Arcella/cli/: index.html
docs/Arcella/config/: fn.load.html  index.html  sidebar-items.js  struct.ArcellaConfig.html
docs/Arcella/error/: enum.ArcellaError.html  index.html  sidebar-items.js  type.AnyResult.html  type.Result.html
docs/Arcella/log/: index.html
docs/Arcella/manifest/: index.html
docs/Arcella/runtime/: index.html  sidebar-items.js  struct.ArcellaRuntime.html  struct.ArcellaRuntimeEnvironment.html  struct.ArcellaRuntimeStatus.html
docs/Arcella/storage/: index.html  struct.StorageManager.html
docs/alme_proto/: all.html  index.html  sidebar-items.js  struct.AlmeRequest.html  struct.AlmeResponse.html
docs/arcella/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Cli.html
docs/arcella/alme/: fn.start.html  index.html  sidebar-items.js  struct.AlmeRequest.html  struct.AlmeResponse.html  struct.AlmeServerHandle.html
docs/arcella/cache/: index.html  struct.ModuleCache.html
docs/arcella/cli/: index.html
docs/arcella/config/: constant.DEFAULT_CONFIG_CONTENT.html  constant.DEFAULT_CONFIG_FILENAME.html  constant.MAIN_CONFIG_FILENAME.html  constant.REDEF_SUFFIX.html  constant.TEMPLATE_CONFIG_CONTENT.html  fn.check_mtimes_changed.html  fn.collect_paths_recursive.html  fn.ensure_config_template.html  fn.ensure_main_config_exists.html  fn.get_current_mtimes.html  fn.load.html  fn.merge_config.html  index.html  sidebar-items.js  struct.ArcellaConfig.html  struct.ConfigFile.html  struct.Includes.html  struct.IntegrityCheck.html  struct.IntegrityChecker.html  struct.KeyValueWithLevel.html  struct.ResolvedValue.html
docs/arcella/error/: enum.ArcellaError.html  index.html  type.AnyResult.html  type.Result.html
docs/arcella/log/: fn.default_alme_buffer_size.html  fn.default_file.html  fn.default_log_level.html  fn.default_stderr.html  fn.default_structured.html  fn.deserialize_level_filter.html  fn.deserialize_module_levels.html  fn.get_log_buffer.html  fn.get_recent_logs.html  fn.init.html  fn.load_tracing_config.html  index.html  sidebar-items.js  static.LOG_BUFFER.html  struct.AlmeBufferLayer.html  struct.EventVisitor.html  struct.TracingConfig.html
docs/arcella/manifest/: enum.IsolationMode.html  fn.load_component_manifest_from_toml.html  fn.validate_compatibility.html  fn.validate_isolation_constraints.html  fn.validate_module_id.html  index.html  sidebar-items.js  struct.ComponentBundle.html  struct.ComponentCapabilities.html  struct.ComponentManifest.html  struct.ComponentManifestWrapper.html  struct.DeploymentOverrides.html  struct.DeploymentSpec.html  struct.DeploymentSpecWrapper.html  struct.DeploymentTemplate.html  struct.DeploymentTemplateWrapper.html  struct.FullDeployment.html  struct.ResourceRequirements.html  (+1 more)
docs/arcella_cli/: all.html  enum.Commands.html  fn.get_default_socket_path.html  fn.handle_command.html  fn.main.html  fn.send_alme_request.html  index.html  sidebar-items.js  struct.Cli.html
docs/arcella_fs_utils/: all.html  fn.collect_includes.html  fn.collect_toml_includes.html  fn.find_base_dir.html  fn.find_toml_files_in_dir.html  fn.is_valid_toml_file_path.html  fn.resolve_include_paths.html  index.html  sidebar-items.js  trait.ValueExt.html
docs/arcella_types/: all.html  index.html  sidebar-items.js
docs/arcella_wasmtime/: all.html  enum.ArcellaWasmtimeError.html  index.html  sidebar-items.js  trait.ComponentItemSpecExt.html  trait.ComponentTypeExt.html  type.Result.html
docs/search.index/: 000463eac73a.js  03200f26cddd.js  045b52aa078b.js  046818603d58.js  05789beb8611.js  0578dc9e97f0.js  065e6aedc5e3.js  0800506cdc27.js  0867375b0ac9.js  0a8f5c97ba81.js  0ad75b0cf43b.js  0c945110e6a6.js  0d0fe69ecf7a.js  0e1d29680d01.js  0f58b32699cf.js  11e4ad2ffec3.js  120924be32a4.js  136579c5128f.js  148aeeadc921.js  14a8d5bd9dd7.js  175bc614017c.js  17c057f98d49.js  195107f361f0.js  197a3168806d.js  19f680e78b03.js  1a985bbef26d.js  1abcf9353635.js  1db90ae8d9cc.js  1dcc35731c1c.js  1e4539a500b9.js  1eda3edef49d.js  1f5aec7d6de0.js  1f5f4db53b62.js  1fac978d52a6.js  1febd3488aa5.js  200eccc05eb8.js  2010b74d66eb.js  20b57c28962d.js  20bc2dd5e65e.js  20ffdaf87504.js  (+109 more)
scripts/: build-docs.sh
src/: main.rs
src/alme/: commands.rs  mod.rs  protocol.rs  server.rs
src/cache/: mod.rs
src/config/: mod.rs
src/error/: mod.rs
src/log/: mod.rs
src/runtime/: mod.rs
src/storage/: mod.rs
(+207 files in other folders)
