[package]
name = "Arcella"
version = "0.2.0"
authors = ["Alexey Rybakov"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ArcellaTeam/arcella"

[dependencies]
wasmtime = "37"
wasmtime-wasi = "37"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
wat = "1.239"
dirs = "6"
tokio = { version = "1", features = ["signal", "rt", "net", "io-util", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
thiserror = "2.0.17"
tempfile = "3.23.0"
time = { version = "0.3.44", features = ["formatting", "std"] }


[[test]]
name = "integration_tests"
