[package]
name = "arcella"
version = "0.2.1"
authors = ["Alexey Rybakov"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ArcellaTeam/arcella"

[dependencies]
wasmtime = "37"
wasmtime-wasi = "37"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
wat = "1.239"
dirs = "6"
tokio = { version = "1", features = ["signal", "rt", "net", "io-util", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
tempfile = "3.23.0"
time = { version = "0.3.44", features = ["formatting", "std"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "serde"] }
toml = "0.9.8"


[[test]]
name = "integration_tests"
