[package]
name = "arcella-cli"
version = "0.2.2"
authors = ["Alexey Rybakov"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ArcellaTeam/arcella"

[dependencies]
alme-proto = { path = "../alme-proto" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "6"
tokio = { version = "1", features = ["rt", "net", "io-util", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"