# arcella/alme-proto/Cargo.toml
[package]
name = "arcella-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
wasmtime = "37"
thiserror = "2.0.17"
anyhow = "1"
wat = "1.239"
tokio = { version = "1", features = ["rt", "net", "io-util", "macros"] }


