# arcella/arcella-wasmtime/Cargo.toml
[package]
name = "arcella-wasmtime"
version = "0.1.0"
edition = "2021"
description = "Wasmtime integration for Arcella component introspection"
repository = "https://github.com/ArcellaTeam/arcella/"


[dependencies]
arcella-types = { path = "../arcella-types", version = "0.1.0" }
regex = "1.12.2"
thiserror = "2.0.17"
wasmtime = "37"
wasmtime-wasi = "37"


