[package]
name = "arcella"
version = "0.2.4"
authors = ["Alexey Rybakov"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ArcellaTeam/arcella"

[dependencies]
arcella-types = { path = "../arcella-types" }
arcella-fs-utils = { path = "../arcella-fs-utils" }
arcella-wasmtime = { path = "../arcella-wasmtime" }
wasmtime = "37"
wasmtime-wasi = "37"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
wat = "1.239"
dirs = "6"
tokio = { version = "1", features = ["signal", "rt", "net", "io-util", "macros", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
tempfile = "3.23.0"
time = { version = "0.3.44", features = ["formatting", "std"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "serde"] }
toml = "0.9.8"
regex = "1.12.2"
futures = "0.3.31"
toml_edit = "0.23.7"

[[test]]
name = "integration_tests"
